Re-wording and image size reduction

--- a/assignment-05/about.html
+++ b/assignment-05/about.html
@@ -5,7 +5,7 @@
     </head>
 
     <body>
-        <img src="./images/author-image.jpg" />
+        <img src="./images/author-image.jpg" width="500" height="500"/>
 
         <hr />
 
@@ -19,7 +19,7 @@
             although these became increasingly eccentric towards the end of his life. He died in London in 1946. 
         </p>
 
-        <a href="index.html">Return to Previous Page</a>
+        <a href="index.html">Index</a>
 
     </body>
 </html>
