--- a/assignment-05/index.html
+++ b/assignment-05/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <h1>The Time Machine</h1>
-        <h2>H.G. Wells</h2>
+        <title>
+            Assignment 05
+        </title>
     </head>
 
     <body>
-
+        <h1>The Time Machine</h1>
+        <h2>H.G. Wells</h2>
         <hr />
 
         <p>Time Traveller discuss his theory that time is the fourth dimension. 
