--- a/assignment-05/about.html
+++ b/assignment-05/about.html
@@ -5,7 +5,7 @@
     </head>
 
     <body>
-        <img src="./images/author-image.jpg" width="500" height="500"/>
+        <img src="./images/author-image.jpg" width="500"/>
 
         <hr />
 
