--- a/assignment-05/index.html
+++ b/assignment-05/index.html
@@ -11,11 +11,11 @@
         <h2>H.G. Wells</h2>
         <hr />
 
-        <pre>A group of men, including the narrator, is listening to the Time Traveller discuss his theory that time is the fourth dimension. 
+        <p>A group of men, including the narrator, is listening to the Time Traveller discuss his theory that time is the fourth dimension. 
             The Time Traveller produces a miniature time machine and makes it disappear into thin air. 
             The next week, the guests return, to find their host stumble in, looking disheveled and tired. 
             They sit down after dinner, and the Time Traveller begins his story.
-        </pre>
+        </p>
 
         <p>
             The Time Traveller had finally finished work on his time machine, and it rocketed him into the future. 
