--- a/assignment-05/about.html
+++ b/assignment-05/about.html
@@ -18,7 +18,8 @@
             although these became increasingly eccentric towards the end of his life. He died in London in 1946. 
         </p>
         <img src="./images/author-image.jpg" height="300"/>
-        <a href="index.html">Index</a>
+        
+        <p><a href="index.html">Index</a></p>
 
     </body>
 </html>
