--- a/assignment-06/index.html
+++ b/assignment-06/index.html
@@ -14,6 +14,16 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <style>
+        body
+        {
+            background-color: rgb(250, 244, 234);
+            font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            font-size: 14px
+        }
+        
+    </style>
+
 </head>
 
 
@@ -38,6 +48,7 @@
                     <li>Sprinkle white pepper - optional</li>
                 </ul>
         </ul>
+
         <h4>Optional ingridients for a <b>Croque Madame</b></h4>
             <ul>
                 <li>1 large egg</li>
@@ -74,7 +85,7 @@
 
     <h3>Contact Me</h3>
 
-    <a href="jordan.brist@umconnect.umt.edu">My E-mail</a>
+    <a href="jordan.brist@umconnect.umt.edu">Send an e-mail</a>
     <address>
         The University of Montana<br />
         32 Campus Dr<br />
