--- a/assignment-06/index.html
+++ b/assignment-06/index.html
@@ -18,8 +18,8 @@
         body
         {
             background-color: rgb(250, 244, 234);
-            font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-            font-size: 14px
+            font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+            font-size: 15px
         }
         
     </style>
