--- a/assignment-06/index.html
+++ b/assignment-06/index.html
@@ -18,7 +18,7 @@
         body
         {
             background-color: rgb(250, 244, 234);
-            font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+            font-family:'Roboto', 'Oxygen', 'Helvetica Neue', 'sans-serif'
             font-size: 15px
         }
         
