--- a/assignment-06/index.html
+++ b/assignment-06/index.html
@@ -18,7 +18,7 @@
         body
         {
             background-color: rgb(250, 244, 234);
-            font-family:'Helvetica', 'Candara'
+            font-family:'Helvetica', 'Candara';
             font-size: 15px
         }
         
