--- a/assignment-06/index.html
+++ b/assignment-06/index.html
@@ -33,6 +33,8 @@
 
     <p>This recipe is a slightly streamlined version of one from Andrew Rea from his YouTube channel <a href="https://www.bingingwithbabish.com/recipes/croque-monsieur-brooklyn-nine-nine">Binging with Babish</a></p>
 
+    <img src="./images/recipe-photo.jpg" height="200" align="right"/>
+
     <h2>Ingredients</h2>
         <ul>
             <li>2 slices bread</li>
