--- a/assignment-06/index.html
+++ b/assignment-06/index.html
@@ -21,7 +21,6 @@
             font-family:'Helvetica', 'roboto', 'Candara';
             font-size: 15px
         }
-        
     </style>
 
 </head>
@@ -49,7 +48,7 @@
                     <li>Sprinkle white pepper - optional</li>
                 </ul>
         </ul>
-
+<!--Since a Croque Madame is just a Croque Mosieur with an egg on top, I'll add that as an optional set of ingriedients-->
         <h4>Optional ingridients for a <b>Croque Madame</b></h4>
             <ul>
                 <li>1 large egg</li>
