Update about and README

--- a/assignment-09/about.html
+++ b/assignment-09/about.html
@@ -42,11 +42,12 @@
             <a href="index.html">Home</a>&vert;<a href="about.html">About Us</a>&vert;<a href="contact.html">Contact Us</a>
         </nav>
         </center>
+
        <div>
-        <h1>Color Film Developing Instructable</h1>
+        <center><h1>Color Film Developing Instructable</h1></center><br>
         <ul>
             <li>
-                <strong>Why did you choose this project?</strong>
+                <b>Why did you choose this project?</b>
                 <ol>
                     <li>
                         I enjoy photography and I really love the feeling of taking a physical photo, developing it, and elarging it onto photographic paper. 
@@ -54,7 +55,7 @@
                 </ol>
             </li><br>
             <li>
-                <strong>What does it mean for you?</strong>
+                <b>What does it mean for you?</b>
                 <ol>
                     <li>
                         It makes me feel more connected to what I'm photographing since I'm not just tapping the shutter a million times on my DSLR. The tangibility makes the photos feel real to me moreso than a digital photo. A lot of people say that color developing is harder to do at home, but it's actually easier to me than developing with black and white.
@@ -63,7 +64,7 @@
                 
             </li><br>
             <li>
-                <strong>Where can I learn more?</strong>
+                <b>Where can I learn more?</b>
                 
                 <ol>
                     <li>
