--- a/assignment-09/contact.html
+++ b/assignment-09/contact.html
@@ -35,7 +35,7 @@
         <nav>
             <a href="index.html">Home</a>&vert;<a href="about.html">About Us</a>&vert;<a href="contact.html">Contact Us</a>
         </nav>
-        <h1>Color Film Development Instructable</h1>
+        <h1>Color Film Developing Instructable</h1>
         <center>
             <form>
             <table>
