--- a/assignment-10/index.html
+++ b/assignment-10/index.html
@@ -13,7 +13,7 @@
 
         <title>Assignment 10</title>
 
-        <link rel="stylesheet" type="text/css" href="../../css/style.css" />
+        <link rel="stylesheet" type="text/css" href="/assignment-10/CSS/style.css" />
 
     </head>
 
