--- a/assignment-10/index.html
+++ b/assignment-10/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 
     <head>
@@ -13,7 +12,7 @@
 
         <title>Assignment 10</title>
 
-        <link rel="stylesheet" type="text/css" href="/assignment-10/CSS/style.css" />
+        <link rel="stylesheet" type="text/css" href="./css/style.css" />
 
     </head>
 
