--- a/assignment-10/index.html
+++ b/assignment-10/index.html
@@ -12,7 +12,7 @@
 
         <title>Assignment 10</title>
 
-        <link rel="stylesheet" type="text/css" href="./assignment-10/css/style.css" />
+        <link rel="stylesheet" type="text/css" href="assignment-10/css/style.css" />
 
     </head>
 
