--- a/assignment-11/index.html
+++ b/assignment-11/index.html
@@ -62,7 +62,7 @@
                 <section>Frank Herbert</section>
                 <section>1965</section>
                 <section><a href="https://www.penguinrandomhouse.com/books/352036/dune-by-frank-herbert/9780441013593" target="_new" class="learnmore">Learn more about Dune and Frank Herbert</a></section>
-                <p>All copyrighted imagry and text belongs to <b>The Herbert Limited Partnership</b> and is only being used for educational purposes.</p>
+                <p>All copyrighted imagery and text belongs to <b>The Herbert Limited Partnership</b> and is only being used for educational purposes.</p>
             </footer>
 
     </body>
