Fixed mobile sizing of logo

--- a/assignment-13/about.html
+++ b/assignment-13/about.html
@@ -20,11 +20,13 @@
 <body>
 
     <header class="text">
-        <h1>Red Dragon</h1>
-        <h2>Ramen & Sushi</h2>
-        <div class="image"><img id="logo1" src="images/LogoRedWhite.png" alt="logo1" title="logo1" /></div>
+        <div class="logo1">
+            <img alt="logo1">
+    </div>
+        <div class="logotext">
+            <h1>Red Dragon</h1>
+            <h2>Ramen & Sushi</h2>
         </div>
-
     </header>
 
     <menu class="">
@@ -63,7 +65,9 @@
 
     <div id="main" class="text">
         <br>
-        <div class="image3"><img id="image3" src="images/image 3.jpg" height="300px" alt="Sushi" title="Sushi" /></div>
+        <div class="image3">
+            <img alt="Sushi">
+        </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce mattis porta orci sit amet accumsan. Nunc sed
             elementum leo. Morbi non urna in lorem condimentum dictum. Integer auctor, elit iaculis tempus luctus,
             lectus nisl hendrerit velit, id faucibus risus leo at sapien. Integer egestas dolor et mauris sodales
