--- a/assignment-13/services.html
+++ b/assignment-13/services.html
@@ -20,11 +20,13 @@
 <body>
 
     <header class="text">
-        <h1>Red Dragon</h1>
-        <h2>Ramen & Sushi</h2>
-        <div class="image"><img id="logo1" src="images/LogoRedWhite.png" alt="logo1" title="logo1" /></div>
+        <div class="logo1">
+            <img alt="logo1">
+    </div>
+        <div class="logotext">
+            <h1>Red Dragon</h1>
+            <h2>Ramen & Sushi</h2>
         </div>
-
     </header>
 
     <menu class="">
@@ -63,7 +65,9 @@
 
     <div id="menu" class="text">
         <br>
-        <div class="image2"><img id="image2" src="images/image 2.jpg" height="600px" alt="Menu" title="Menu" /></div>
+        <div class="image2">
+            <img alt="Menu" >
+        </div>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget feugiat nunc, quis rhoncus orci. Nulla
             euismod tempus quam. Cras suscipit, odio at tristique lacinia, eros justo maximus tortor, sit amet tristique
