--- a/assignment-13/contact.html
+++ b/assignment-13/contact.html
@@ -20,11 +20,13 @@
 <body>
 
     <header class="text">
-        <h1>Red Dragon</h1>
-        <h2>Ramen & Sushi</h2>
-        <div class="image"><img id="logo1" src="images/LogoRedWhite.png" alt="logo1" title="logo1" /></div>
+        <div class="logo1">
+            <img alt="logo1">
+    </div>
+        <div class="logotext">
+            <h1>Red Dragon</h1>
+            <h2>Ramen & Sushi</h2>
         </div>
-
     </header>
 
     <menu class="">
