Added content to about

--- a/final/contact.html
+++ b/final/contact.html
@@ -57,14 +57,19 @@
 
 
     
-    <header class="header">
-        <div class="logo1">
-            <img alt = "Logo">
-        </div>
-    </div>
+    <header class="header2">
+        <div class= "headerText">
+            Contact
+            </div>
+        </header>
 
     <div id="contact" class="text">
-        <a href="mailto:email@jordanbrist.net">Send us me Email!</a>
+        <br>
+        <p>Any questions?</p>
+        <a href="mailto:email@jordanbrist.net" style="font-size: 50px">Send me an Email!</a>
+        <br>
+        <br>
+        
 
         <form method="POST" action="contact.html">
             Name:<br />
@@ -73,7 +78,7 @@
             Email:<br />
             <input type="text" id="email" placeholder="Enter your email" autofocus>
             <p></p>
-            Comments<br />
+            Comments:<br />
             <textarea name="comments" id="comments" placeholder="Type here" rows="8" cols="50"></textarea>
             <p></p>
             <input type="submit" name="Submit Form">
