fixed contact header

--- a/final/contact.html
+++ b/final/contact.html
@@ -52,6 +52,10 @@
             <a href="contact.html">Contact</a>
         </div>
 
+        <div class= "logo2">
+            <img alt="logo">
+        </div>
+
 
         </menu>
 
