added more images, iframe video links, and content

--- a/final/about.html
+++ b/final/about.html
@@ -18,14 +18,14 @@
 </head>
 
 <body>
-          
+
     <menu class="">
         <div class="menu-item">
             <a href="index.html">Home</a>
         </div>
 
         <div class="menu-item dropdown">
-            <a href="services.html">Portfolio</a>
+            <a href="animation.html">Portfolio</a>
 
             <div class="dropdown-content">
 
@@ -33,12 +33,10 @@
                     <a href="photography.html" target="_new">Photography</a>
                 </div>
                 <div class="dropdown-item">
-                    <a href="animation.html"
-                        target="_new">Animation</a>
+                    <a href="animation.html" target="_new">Animation</a>
                 </div>
                 <div class="dropdown-item">
-                    <a href="art.html"
-                        target="_new">Artwork</a>
+                    <a href="art.html" target="_new">Artwork</a>
                 </div>
 
             </div>
@@ -52,32 +50,49 @@
             <a href="contact.html">Contact</a>
         </div>
 
-
-        </menu>
-
-    <div class="header2">
-        <div class= "headerText">
-            About
-            </div>
+        <div class="logo2">
+            <img alt="logo">
         </div>
 
-    <div id="contact" class="text">
-      
+
+    </menu>
+
+    <header class="header2">
+        <div class="headerText">
+            About
+        </div>
+    </header>
+
+    <div id="about" class="text">
+        <img src="../final/images/photos/self.jpg" alt="self portrait" style="width: 300px">
+        <br>
+        <br>
+        <p>All of the content on this website has been created by myself. A lot of it is actually stuff that I made for
+            my other courses I have taken over the past couple of years at UM.</p>
+        <br>
+        <p>The website layout and design take inspiration from a mockup that I made in Photoshop for MART 111. I then
+            brought that to life in After Effects for a project in MART 302. </p>
+        <p>It's fitting that I have finally turned that original mockup into a reality and created the foundation for a
+            real website.</p>
+        <p>I am by no means a professional of any sort, I just like collecting cameras, taking photos, and making stuff
+            that I enjoy. </p>
+        <br>
+
     </div>
 
     <div id="footer" class="footer">
         <div class="row">
             <div class="column">
-              <img src="../final/images/facebook.png" alt="facebook logo" style="width:100%">
+                <img src="../final/images/facebook.png" alt="facebook logo" style="width:100%">
             </div>
             <div class="column">
-              <img src="../final/images/instagram.png" alt="instagram logo" style="width:100%">
+                <img src="../final/images/instagram.png" alt="instagram logo" style="width:100%">
             </div>
             <div class="column">
-              <img src="../final/images/twitter.png" alt="twitter logo" style="width:100%">
+                <img src="../final/images/twitter.png" alt="twitter logo" style="width:100%">
             </div>
-          </div>
         </div>
+    </div>
 
 </body>
 
