fixed mobile sizing

--- a/final/animation.html
+++ b/final/animation.html
@@ -79,31 +79,31 @@
     <div id="animation" class="container">
 
         <p>Digital Animation</p>
-        <iframe width="760" height="435" src="https://www.youtube.com/embed/BJpBK9COaSo" title="YouTube video player"
+        <iframe  src="https://www.youtube.com/embed/BJpBK9COaSo" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
 
         <p>Stop Motion Animation</p>
-        <iframe width="760" height="422" src="https://www.youtube.com/embed/yV8E_vLXbB8" title="YouTube video player"
+        <iframe  src="https://www.youtube.com/embed/yV8E_vLXbB8" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
 
         <p>Flipbook Animation</p>
-        <iframe width="760" height="426" src="https://www.youtube.com/embed/uDZZnCYUCLc" title="YouTube video player"
+        <iframe  src="https://www.youtube.com/embed/uDZZnCYUCLc" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
 
         <p>3D Animation</p>
-        <iframe width="760" height="415" src="https://www.youtube.com/embed/9Oj8wJDQL_I" title="YouTube video player"
+        <iframe src="https://www.youtube.com/embed/9Oj8wJDQL_I" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
 
         <p>Camera Tracking</p>
-        <iframe width="760" height="409" src="https://www.youtube.com/embed/vNQNp1PdbhY" title="YouTube video player"
+        <iframe  src="https://www.youtube.com/embed/vNQNp1PdbhY" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
