--- a/final/art.html
+++ b/final/art.html
@@ -82,20 +82,20 @@
 
         <table id="artwork">
             <tr>
-                <td><img src="../final/images/art/art 1.png" width="500"></td>
-                <td><img src="../final/images/art/art 2.png" width="500"></td>
+                <td><img src="../final/images/art/art 1.png"></td>
+                <td><img src="../final/images/art/art 2.png"></td>
             </tr>
             <tr>
-                <td><img src="../final/images/art/art 3.jpg" width="500"></td>
-                <td><img src="../final/images/art/art 4.jpg" width="500"></td>
+                <td><img src="../final/images/art/art 3.jpg"></td>
+                <td><img src="../final/images/art/art 4.jpg"></td>
             </tr>
             <tr>
-                <td><img src="../final/images/art/art 5.png" width="500"></td>
-                <td><img src="../final/images/art/art 6.gif" width="500"></td>
+                <td><img src="../final/images/art/art 5.png"></td>
+                <td><img src="../final/images/art/art 6.gif"></td>
             </tr>
             <tr>
-                <td><img src="../final/images/art/art 7.jpg" width="500"></td>
-                <td><img src="../final/images/art/art 8.png" width="500"></td>
+                <td><img src="../final/images/art/art 7.jpg"></td>
+                <td><img src="../final/images/art/art 8.png"></td>
             </tr>
         </table>
 
