--- a/final/index.html
+++ b/final/index.html
@@ -65,19 +65,19 @@
         <div id="main" class="body">
             <table id="slideshow">
                 <tr>
-                    <td><img src="images/photos/photo4.png" height="300"></td>
-                    <td><img src="images/photos/photo5.jpg" height="300"></td>
-                    <td><img src="images/photos/photo1.jpg" height="300"></td>
-                    <td><img src="images/photos/photo3.jpg" height="300"></td>
-                    <td><img src="images/photos/photo6.jpg" height="300"></td>
-                    <td><img src="images/photos/photo8.png" height="300"></td>
-                    <td><img src="images/photos/photo9.png" height="300"></td>
-                    <td><img src="images/photos/photo10.jpg" height="300"></td>
-                    <td><img src="images/photos/photo11.png" height="300"></td>
-                    <td><img src="images/photos/photo2.jpg" height="300"></td>
-                    <td><img src="images/photos/photo7.jpg" height="300"></td>
-                    <td><img src="images/photos/photo12.jpg" height="300"></td>
-                    <td><img src="images/photos/photo13.jpg" height="300"></td>
+                    <td class="slide"><img src="images/photos/photo4.png" height="300"></td>
+                    <td class="slide"><img src="images/photos/photo5.jpg" height="300"></td>
+                    <td class="slide"><img src="images/photos/photo1.jpg" height="300"></td>
+                    <td class="slide"><img src="images/photos/photo3.jpg" height="300"></td>
+                    <td class="slide"><img src="images/photos/photo6.jpg" height="300"></td>
+                    <td class="slide"><img src="images/photos/photo8.png" height="300"></td>
+                    <td class="slide"><img src="images/photos/photo9.png" height="300"></td>
+                    <td class="slide"><img src="images/photos/photo10.jpg" height="300"></td>
+                    <td class="slide"><img src="images/photos/photo11.png" height="300"></td>
+                    <td class="slide"><img src="images/photos/photo2.jpg" height="300"></td>
+                    <td class="slide"><img src="images/photos/photo7.jpg" height="300"></td>
+                    <td class="slide"><img src="images/photos/photo12.jpg" height="300"></td>
+                    <td class="slide"><img src="images/photos/photo13.jpg" height="300"></td>
                 </tr>
             </table>
 
