--- a/final/photography.html
+++ b/final/photography.html
@@ -80,37 +80,37 @@
 
         <table id="photos" style>
             <tr>
-                <td><img src="../final/images/photos/photo3.jpg" > </td>
-                <td><img src="../final/images/photos/photo2.jpg"></td>
+                <td class="table2"><img src="../final/images/photos/photo3.jpg" > </td>
+                <td class="table2"><img src="../final/images/photos/photo2.jpg"></td>
             </tr>
 
             <tr>
-                <td><img src="../final/images/photos/photo1.jpg"></td>
-                <td><img src="../final/images/photos/photo5.jpg" ></td>
+                <td class="table2"><img src="../final/images/photos/photo1.jpg"></td>
+                <td class="table2"><img src="../final/images/photos/photo5.jpg" ></td>
             </tr>
             <tr>
-                <td><img src="../final/images/photos/photo6.jpg"></td>
-                <td><img src="../final/images/photos/photo10.jpg"></td>
+                <td class="table2"><img src="../final/images/photos/photo6.jpg"></td>
+                <td class="table2"><img src="../final/images/photos/photo10.jpg"></td>
             </tr>
 
             <tr>
-                <td><img src="../final/images/photos/photo4.png"></td>
-                <td><img src="../final/images/photos/photo9.png"></td>
+                <td class="table2"><img src="../final/images/photos/photo4.png"></td>
+                <td class="table2"><img src="../final/images/photos/photo9.png"></td>
                 
             </tr>
             <tr>
-                <td><img src="../final/images/photos/photo12.jpg"></td>
-                <td><img src="../final/images/photos/photo13.jpg"></td>
+                <td class="table2"><img src="../final/images/photos/photo12.jpg"></td>
+                <td class="table2"><img src="../final/images/photos/photo13.jpg"></td>
             </tr>
 
             <tr>
-                <td><img src="../final/images/photos/photo15.jpg" ></td>
-                <td><img src="../final/images/photos/photo7.jpg"></td>
+                <td class="table2"><img src="../final/images/photos/photo15.jpg" ></td>
+                <td class="table2"><img src="../final/images/photos/photo7.jpg"></td>
             </tr>
 
             <tr>
-                <td><img src="../final/images/photos/photo11.png"></td>
-                <td><img src="../final/images/photos/photo8.png"></td>
+                <td class="table2"><img src="../final/images/photos/photo11.png"></td>
+                <td class="table2"><img src="../final/images/photos/photo8.png"></td>
             </tr>
 
 
