fixed some errors

--- a/final/about.html
+++ b/final/about.html
@@ -64,7 +64,8 @@
     </header>
 
     <div id="about" class="text">
-        <img src="../final/images/photos/self.jpg" alt="self portrait" style="width: 300px">
+        <img src="../final/images/photos/self.jpg" alt="self portrait" style="width: 300px" style="margin-left: auto"; style="margin-right: auto;">
+        <br>
         <br>
         <br>
         <p>All of the content on this website has been created by myself. A lot of it is actually stuff that I made for
@@ -74,8 +75,8 @@
             brought that to life in After Effects for a project in MART 302. </p>
         <p>It's fitting that I have finally turned that original mockup into a reality and created the foundation for a
             real website.</p>
-        <p>I am by no means a professional of any sort, I just like collecting cameras, taking photos, and making stuff
-            that I enjoy. </p>
+        <p>I just like collecting cameras, taking photos, and making stuff
+            that I enjoy.</p>
         <br>
 
     </div>
