--- a/final/art.html
+++ b/final/art.html
@@ -11,7 +11,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Final</title>
+    <title>Artwork</title>
 
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
 
@@ -77,7 +77,8 @@
     </menu>
 
     <div id="art" class="container">
-
+        <br>
+        <br>
         <p>Most of these are old assingments or projects from previous courses.</p>
 
         <table id="artwork">
