fixed some padding errors on the index page
also added a new line of text to the contact sheet

--- a/final/contact.html
+++ b/final/contact.html
@@ -68,10 +68,10 @@
     <div id="contact" class="text">
         <br>
         <p>Any questions?</p>
-        <a href="mailto:email@jordanbrist.net" style="font-size: 50px">Send me an Email!</a>
-        <br>
+        <a href="mailto:jordan.brist@umconnect.umt.edu" style="font-size: 50px">Send me an Email!</a>
         <br>
 
+        <p>(or fill out this form)</p>
 
         <form method="POST" action="contact.html">
             Name:<br />
