--- a/final/index.html
+++ b/final/index.html
@@ -60,7 +60,11 @@
         <div class="logo1">
             <img alt="Logo">
         </div>
-        </div>
+    </header>
+    
+    <div id=recent class=text>
+        <p>Recent Additions</p>
+    </div>
 
         <div id="main" class="body">
             <table id="slideshow">
@@ -83,9 +87,7 @@
 
         </div>
 
-        <div id=recent class=text>
-            <p>Recent Additions</p>
-        </div>
+        
 
 
 
