--- a/final/index.html
+++ b/final/index.html
@@ -60,10 +60,6 @@
         <div class="logo1">
             <img alt="Logo">
         </div>
-    </header>
-    
-    <div id=recent class=text>
-        <p>Recent Additions</p>
     </div>
 
         <div id="main" class="body">
@@ -87,11 +83,9 @@
 
         </div>
 
-        
-
-
-
-
+        <div id=recent class=text>
+            <p>Recent Additions</p>
+        </div>
 
         <div id="footer" class="footer">
             <div class="row">
